Stop hiding scrollbar in chrome now that things are fixed up.

--- a/inthe_am/taskmanager/static/foundation/scss/app.scss
+++ b/inthe_am/taskmanager/static/foundation/scss/app.scss
@@ -121,7 +121,6 @@ div.row {
       text-align: center;
     }
   }
-  &::-webkit-scrollbar { width: 0 !important }
 }
 
 #list, #mobile-list {
